chore: Upgrade to Gradle 8.14.4, AGP 8.10.0, Java 21, Robolectric 4.12.2
- Gradle wrapper: 8.10.2 → 8.14.4
- Android Gradle Plugin: 8.1.0 → 8.10.0
- Java compilation: VERSION_17 → VERSION_21 (full Java 21 bytecode)
- Robolectric: 4.10.3 → 4.12.2 (Java 21 support)
- foojay plugin: 0.8.0 → 0.9.0

AGP 8.10.0 resolves the previous jdkImage transform issue with Java 21,
enabling full Java 21 compilation. Build Tools 36.x.x auto-selected by AGP.

All 38 unit tests pass with Java 21 + Robolectric 4.12.2.
Class file version verified: 65 (Java 21).

Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>